use immutable Stream .toList()